chore: adaptação do código p/ ionic atual e pt-br

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,4 +1,4 @@
-.high{
+.alta{
   border-left: 2px solid red;
   padding-left: 4px;
 }
@@ -8,11 +8,11 @@
   padding-left: 4px;
 }
 
-.low{
+.baixa{
   border-left: 2px solid green;
   padding-left: 4px;
 }
 
-.done{
+.finalizada{
   text-decoration: line-through;
 }
